plugins/kotlin/idea/tests/testData/highlighterMetaInfo/SyntheticExtensionProperty.kt.highlighting
// FIR_IDENTICAL
val <!HIGHLIGHTING("textAttributesKey='KOTLIN_PACKAGE_PROPERTY'")!>weekYear<!> = java.util.<!HIGHLIGHTING("textAttributesKey='KOTLIN_ABSTRACT_CLASS'")!>Calendar<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_CALL'")!>getInstance<!>().<!HIGHLIGHTING("textAttributesKey='KOTLIN_SYNTHETIC_EXTENSION_PROPERTY'")!>weekYear<!>